# Remote-Project_2

./: Add.h  Automaton.h  CMakeLists.txt  Colon.h  ColonDash.h  Comma.h  Datalog.cpp  Datalog.h  DatalogProgram.h  ID.h  Lexer.cpp  Lexer.h  P2Rules.h  Parameter.h  Parser.cpp  Parser.h  Period.h  Predicate.h  Q_Mark.h  Right_Paren.h  Token.h  main.cpp  makefile
